--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@expo/vector-icons": "^10.2.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/drawer": "^5.8.4",
     "expo": "~38.0.1",
     "expo-font": "^8.2.1",
     "expo-status-bar": "^1.0.0",
@@ -23,6 +24,7 @@
     "react-native-screens": "^2.9.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.4.0",
+    "react-navigation-drawer": "^2.5.0",
     "react-navigation-header-buttons": "^4.0.2",
     "react-navigation-material-bottom-tabs": "^2.3.0",
     "react-navigation-stack": "^2.8.2",
